Bug 1802278 - Return modification not allowed when trying to overwrite locked files. r=dom-storage-reviewers,jesup

OPFS disallows all overwrites but for web compatibility,
but in such a case, according to web platform tests
  [move(dir) while the destination file has an open writable fails]
  [move(dir, name) while the destination file has an open writable fails]
we should check if the destination is locked and return the appropriate error.

Differential Revision: https://phabricator.services.mozilla.com/D162859